Add distribution packaging and CI lanes
Package the simulator as an OS-specific ZIP with Unix and Windows launcher scripts, copy pinned runtime dependencies into lib, and document the packaged launch path in the README.

The launcher scripts and CI now explicitly use and log --enable-native-access=ALL-UNNAMED so Java 24 can load classpath native libraries such as jSerialComm. The workflow also has separate GUI-headless, distribution smoke, and opt-in serial-it lanes.

Verification: ./mvnw verify (82 tests, JaCoCo line coverage 86.96%, source-size gate passed); ./mvnw -B -DskipTests package; packaged bin/modemsim test --suite acceptance --case A01.